[gd_scene load_steps=8 format=3 uid="uid://cpixp7bpg8lr8"]

[ext_resource type="Script" path="res://players/player.gd" id="1_nu2pa"]
[ext_resource type="Texture2D" uid="uid://cv647ka5rxl4e" path="res://icon.svg" id="2_xjqjf"]
[ext_resource type="Script" path="res://players/modules/input.gd" id="3_gth62"]
[ext_resource type="Script" path="res://players/modules/mover.gd" id="4_cyjhf"]
[ext_resource type="Script" path="res://players/modules/parasol_grabber.gd" id="4_gj6w2"]
[ext_resource type="Script" path="res://players/modules/tourist_lure.gd" id="5_kss0w"]
[ext_resource type="PackedScene" uid="uid://fw8nddm4510o" path="res://suns/modules/light_source.tscn" id="6_om7sc"]

[node name="Player" type="Node2D"]
script = ExtResource("1_nu2pa")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.21, 1, 0.539167, 1)
texture = ExtResource("2_xjqjf")

[node name="Input" type="Node" parent="."]
script = ExtResource("3_gth62")

[node name="Mover" type="Node2D" parent="." node_paths=PackedStringArray("input")]
script = ExtResource("4_cyjhf")
input = NodePath("../Input")

[node name="ParasolGrabber" type="Node2D" parent="." node_paths=PackedStringArray("input")]
script = ExtResource("4_gj6w2")
input = NodePath("../Input")

[node name="TouristLure" type="Node2D" parent="." node_paths=PackedStringArray("input")]
script = ExtResource("5_kss0w")
input = NodePath("../Input")

[node name="LightSource" parent="." instance=ExtResource("6_om7sc")]
type = 1
